--- a/index.html
+++ b/index.html
@@ -18,6 +18,27 @@
             </div>
         </header>
 
+        <section class=" row justify-content-center">
+
+
+            <div class="col-4-sm-12 ">
+                <div class="card" style="width: 20rem;">
+                    <div class="card-header text-center"> 
+                        <h5> Name </h5>
+                        <h6> Position </h6> 
+                    </div>
+
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item"> ID Number: </li>
+                            <li class="list-group-item"> Email: <a href="email@mail.com"> email@mail.com</a> </li>
+                            <li class="list-group-item"> Office Number: </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </body>
 
 </html>
